# arrowmodel

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOP.md  LICENSE  MAINTAINER.md  README.md  justfile  mkdocs.yml  pyproject.toml
.doc-writer/: config.yaml  context.md  editor-report.md  gap-report.md  page-inventory.md  persona-report-python-backend-engineers.md  scenarios.yaml  terminology.yaml
.github/: dependabot.yml
.github/workflows/: build-dist.yml  docs.yml  pr.yml  quality.yml  release.yml  weekly.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.0.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md
.planning/phases/01-build-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-spike-benchmark/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-core-conversion/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-extended-types/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-validated-path-and-api-polish/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-support-all-pyarrow-types/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-test-coverage-and-api-completeness/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VERIFICATION.md
.planning/quick/260322-k1b-update-benchmarks-bench-convert-py-with-/: 260322-k1b-PLAN.md  260322-k1b-SUMMARY.md
.planning/quick/260404-1uo-arrowmodel-base-class-with-convert-and-i/: 260404-1uo-PLAN.md  260404-1uo-SUMMARY.md
.planning/quick/260705-ti7-complete-package-rename-arrowdantic-to-a/: 260705-ti7-PLAN.md  260705-ti7-SUMMARY.md
.planning/quick/260706-nlm-pr16-review-fixes-and-list-of-model/: 260706-nlm-PLAN.md  260706-nlm-SUMMARY.md
.planning/quick/260706-svw-pr16-followup-fixes-robust-arrow-is-map-/: PLAN.md  SUMMARY.md
.planning/quick/260707-06i-fix-release-pipeline-abi3-wheels-maturin/: PLAN.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/done/: 2026-03-22-rename-package-arrowdantic-name-taken.md
.planning/todos/pending/: 2026-03-22-explore-schema-model-bridge-ecosystem.md
_notes/: arrowdantic-design.md  arrowmodel-design.md
benchmarks/: bench_convert.py  results-v1.0-2026-04-03.txt
docs/: conf.py  index.rst
docs/explanation/: fast-vs-validated.rst  index.rst  type-mappings.rst
docs/how-to/: choose-api-style.rst  convert-nested-models.rst  index.rst  integrate-fastapi.rst  iterate-large-datasets.rst  use-validated-mode.rst  use-with-pandera.rst  use-with-poldantic.rst  work-with-aliases.rst
docs/reference/: api.rst  index.rst
docs/src/: index.md
docs/tutorials/: getting-started.rst  index.rst
rust/: Cargo.toml
rust/src/: extract.rs  lib.rs
src/arrowdantic/: __init__.py  _core.pyi
src/arrowmodel/: __init__.py  _core.pyi
tests/: conftest.py  test_arrow_model_base.py  test_arrowdantic.py  test_arrowmodel.py  test_convert.py  test_extended_types.py  test_smoke.py
