[project]
name = "arrowdantic"
version = "0.1.0"
description = "A Python library for Apache Arrow"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11",
]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ipython>=9.10.0",
    "pdbpp>=0.12.0.post1",
    "pyarrow>=23.0.1",
    "pyarrow-stubs>=20.0.0.20251215",
    "pytest>=8.0.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# Relax rules triggered by incomplete pyarrow-stubs (third-party stub issue)
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "arrowdantic._core"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "rust/Cargo.toml" }, { file = "rust/**/*.rs" }]

[tool.pytest.ini_options]
addopts = "-v"
