[project]
name = "arrowmodel"
version = "1.0.0"
description = "A Python library for Apache Arrow"
readme = "README.md"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "ipython>=9.13.0",
    "pdbpp>=0.12.0.post1",
    "pyarrow>=24.0.0",
    "pyarrow-stubs>=20.0.0.20260625",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.12",
]
docs = [
    "sphinx>=8.0",
    "shibuya>=2026.5.19",
    "sphinx-autoapi>=3.4",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-autobuild>=2024.10",
    "sphinxcontrib-mermaid>=1.0",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# Relax rules triggered by incomplete pyarrow-stubs (third-party stub issue)
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D1",    # don't require docstrings everywhere
    "D202",  # allow blank line after docstring (common in tests)
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D212",  # conflicts with D213 (multiline summary on second line)
    "D401",  # imperative mood is awkward for dunder methods
    "D413",  # blank line after last section not required
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "arrowmodel._core"
# maturin auto-detects the root LICENSE and records `License-File: LICENSE` in the
# distribution metadata, and bundles it into the wheel -- but not into the sdist
# (the crate manifest lives in rust/). PyPI rejects an sdist whose metadata names
# a License-File that isn't present, so include it explicitly in the sdist.
include = [{ path = "LICENSE", format = "sdist" }]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "rust/Cargo.toml" }, { file = "rust/**/*.rs" }]

[tool.pytest.ini_options]
addopts = "-v"
