[package]
name = "arrowdantic-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "chrono"] }
pyo3-arrow = "0.17"
arrow-array = "58"
arrow-schema = "58"
arrow-cast = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
base64 = "0.22"
